syntax = "proto3";
package com.improving.app.organization.domain;

import "scalapb/scalapb.proto";
import "scalapb/validate.proto";

import "com/improving/app/common/domain/ids.proto";
import "com/improving/app/organization/domain/organizationTypeDefinitions.proto";
import "validate/validate.proto";

option (scalapb.options) = {
  scope: FILE
  [scalapb.validate.file] {
    validate_at_construction: true
  }
  field_transformations: [
    {
      when: {options: {[validate.rules] {message: {required: true}}}}
      set: {
        [scalapb.field] {
          required: true
        }
      }
    }
  ]
};

message OrganizationEvent {
  oneof sealed_value {
    OrganizationEstablished organization_established = 1;
    OrganizationActivated organization_activated = 2;
    OrganizationSuspended organization_suspended = 3;
    OrganizationTerminated organization_terminated = 4;
    OrganizationInfoEdited organization_info_edited = 5;
  }
}

message OrganizationEstablished {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  com.improving.app.common.domain.OrganizationId organization_id = 1 [(validate.rules).message.required = true];
  com.improving.app.organization.domain.OrganizationInfo organization_info = 2 [(validate.rules).message.required = true];
  com.improving.app.organization.domain.OrganizationMetaInfo meta_info = 3 [(validate.rules).message.required = true];
}

message OrganizationActivated {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  com.improving.app.common.domain.OrganizationId organization_id = 1 [(validate.rules).message.required = true];
  com.improving.app.organization.domain.OrganizationMetaInfo meta_info = 2 [(validate.rules).message.required = true];
}

message OrganizationSuspended {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  com.improving.app.common.domain.OrganizationId organization_id = 1 [(validate.rules).message.required = true];
  com.improving.app.organization.domain.OrganizationMetaInfo meta_info = 2 [(validate.rules).message.required = true];
}

message OrganizationTerminated {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  com.improving.app.common.domain.OrganizationId organization_id = 1 [(validate.rules).message.required = true];
}

message OrganizationInfoEdited {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  com.improving.app.common.domain.OrganizationId organization_id = 1 [(validate.rules).message.required = true];
  OrganizationMetaInfo meta_info = 2 [(validate.rules).message.required = true];
  OrganizationInfo old_info = 3 [(validate.rules).message.required = true];
  OrganizationInfo new_info = 4 [(validate.rules).message.required = true];
}
